examples/valid/ejemplo1.cpp
int add(int a, int b) {
  return a + b;
}

int main() {
  int x = 10;
  int y = 20;
  int z = add(x, y);
  date nacimiento = '2002-13-17';
  return 0;
}
