examples/invalid/error_lexico1.cpp
int main() {
  int x = 10 @ 5; // '@' no es un símbolo válido
  return 0;
}
